preparing (basic sizes, fonts, variables, etc.)

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,10 +1,12 @@
 // @font-face {
-//   font-family: "Quicksand-Regular";
-//   font-weight: 400;
+//   font-family: 'DINPro';
+//   font-weight: 500;
 //   font-style: normal;
 //   src: local("Quicksand-Regular"),
 //     url('../fonts/Quicksand-Regular.woff2') format("woff2"),
 //     url('../fonts/Quicksand-Regular.woff') format("woff");
 //   font-display: swap;
 // }
+
 // === *** ===
+// DINPro 400, 500, 700
