--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,21 +1,20 @@
-// html,
-// body {
-//   height: 100%;
-// }
+html,
+body {
+  height: 100%;
+}
 
-// body {
-//   display: flex;
-//   flex-direction: column;
-//   @extend %;
-//   font-size: px;
-//   line-height: px;
-//   color: $default;
-// }
+body {
+  display: flex;
+  flex-direction: column;
+  @extend %;
+  font-size: 18px;
+  line-height: 23px;
+  color: $default;
+}
 
-// delete if not need fixed to bottom footer
-// .main {
-//   flex-grow: 1;
-// }
+.main {
+  flex-grow: 1;
+}
 
 // a {
 //   @extend %;
@@ -24,8 +23,8 @@
 //   color: $default;
 // }
 
-// .container {
-//   max-width: 1200px;
-//   margin: 0 auto;
-//   padding: 0 15px;
-// }
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
