--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,12 +1,29 @@
-// @font-face {
-//   font-family: 'DINPro';
-//   font-weight: 500;
-//   font-style: normal;
-//   src: local("Quicksand-Regular"),
-//     url('../fonts/Quicksand-Regular.woff2') format("woff2"),
-//     url('../fonts/Quicksand-Regular.woff') format("woff");
-//   font-display: swap;
-// }
+@font-face {
+  font-family: 'DIN Pro';
+  font-weight: 400;
+  font-style: normal;
+  src: local("dinpro"),
+    url('../fonts/dinpro.woff2') format("woff2"),
+    url('../fonts/dinpro.woff') format("woff");
+  font-display: swap;
+}
 
-// === *** ===
-// DINPro 400, 500, 700
+@font-face {
+  font-family: 'DIN Pro';
+  font-weight: 500;
+  font-style: normal;
+  src: local("dinpro_medium"),
+    url('../fonts/dinpro_medium.woff2') format("woff2"),
+    url('../fonts/dinpro_medium.woff') format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'DIN Pro';
+  font-weight: 700;
+  font-style: normal;
+  src: local("dinpro_bold"),
+    url('../fonts/dinpro_bold.woff2') format("woff2"),
+    url('../fonts/dinpro_bold.woff') format("woff");
+  font-display: swap;
+}
