--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -14,7 +14,7 @@ $btn-green: #80C14D;
 
 // === FONTS ===
 %dinpro-400 {
-  font-family: "Quicksand-Regular", sans-serif;
+  font-family: 'DIN Pro', sans-serif;
   font-weight: 400;
 }
 
