--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,6 +5,101 @@
 @import "global";
 // === PARTIALS ===
 
+// === HEADER ===
+.header {
+
+  // .header__inner
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 37px 0 67px;
+  }
+
+  // .header__logo
+  &__logo {}
+
+  // .header__right-side
+  &__right-side {
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  // .header__user-panel
+  &__user-panel {
+    margin-right: 0;
+    margin-bottom: 46px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  // .header__search
+  &__search {}
+
+  // .header__search-form
+  &__search-form {
+    display: flex;
+  }
+
+  // .header__search-input
+  &__search-input {
+    min-width: 210px;
+    min-height: 30px;
+    padding: 4px 7px;
+    font-size: 15px;
+    line-height: 1;
+  }
+
+  // .header__search-btn
+  &__search-btn {
+    display: flex;
+    align-items: center;
+  }
+
+  // .header__user-panel-icon
+  &__user-panel-icon {
+    margin-right: 12px;
+  }
+
+  // .header__user-panel-icon:first-child
+  &__user-panel-icon:first-child {
+    margin-left: 10px;
+  }
+
+  // .header__user-panel-btn
+  &__user-panel-btn {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  // .header__nav
+  &__nav {}
+
+  // .header__nav-menu
+  &__nav-menu {
+    display: flex;
+    justify-content: space-between;
+    @extend %dinpro-500;
+    color: $default;
+    font-size: 16px;
+    line-height: 1;
+  }
+
+  // .header__nav-item
+  &__nav-item {}
+
+  // .header__nav-item + .header__nav-item
+  &__nav-item+.header__nav-item {
+    margin-left: 42px;
+  }
+
+  // .header__nav-link
+  &__nav-link {}
+}
+
+// === / HEADER ===
 
 
 // === ADAPTIVE ===
