--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,7 +8,7 @@ body {
   flex-direction: column;
   @extend %dinpro-400;
   font-size: 18px;
-  line-height: 23px;
+  line-height: 1.3;
   color: $default;
 }
 
